# P2poolBTC

./: .gitattributes  .gitignore  BETA-TESTING.md  COMMUNITY-EXPERIMENT-1.md  COMMUNITY-QUICKSTART.md  COMMUNITY-README.md  Cargo.toml  EXPERIMENT-0.md  EXPERIMENT-1.md  EXPERIMENT-2.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
compatibility/: experiment-0-activation.json  experiment-1-full-consensus-revision-2.json  experiment-1-full-consensus.json  experiment-1-launch-policy.json  experiment-1-miner-registry-candidate.json  experiment-1-onboarding-profile.json  experiment-1-share-work-binding-policy-v1.json  experiment-1-share-work-successor-candidate.json  experiment-2-bitcoin-core-patch-lock.json  experiment-2-consensus-identity-authorization.fixture.json  experiment-2-consensus-identity-candidate.json  experiment-2-consensus-identity-policy.fixture.json  explorer-stack-lock.json  governance-build-plan-v1.json  governance-day-fork-candidate-lock.json  governance-day-idena-ai-integration.json  governance-day-local-candidate-lock.json  governance-day-parameters.json  governance-day-parameters.lock.json  governance-fork-lock.json  governance-testnet-parameters-v1.json
crates/governance-cli/: Cargo.toml
crates/governance-cli/src/: ipfs.rs  main.rs  output.rs
crates/governance-core/: Cargo.toml
crates/governance-core/src/: attestation.rs  development_policy.rs  epoch_demo.rs  epoch_governance.rs  gates.rs  identity.rs  lib.rs  lifecycle.rs  manifest.rs  math.rs  metrics.rs  parameters.rs  readiness.rs  release.rs  scope.rs  source.rs  types.rs
crates/governance-core/tests/: cross_language_vectors.rs  governance_vertical_slice.rs
crates/idena-lite-indexer/: Cargo.toml
crates/idena-lite-indexer/src/: consensus_identity_snapshot.rs  lib.rs  main.rs  rpc.rs  snapshot_builder.rs  strict_json.rs
crates/p2pool-node/: Cargo.toml
crates/p2pool-node/src/: bitcoin_explorer_index.rs  bitcoin_rpc.rs  dashboard_api.rs  explorer_api.rs  fork_address_index.rs  fork_chain.rs  fork_explorer.rs  frost_signer_daemon.rs  governance_api.rs  idena_anchor_verifier.rs  local_node.rs  main.rs  mining_adapter.rs  p2p_node.rs  peer_policy.rs  strict_json.rs
crates/pohw-agent/: Cargo.toml
crates/pohw-agent/assets/: app.js  callback.js  index.html  style.css
crates/pohw-agent/src/: bootstrap.rs  config.rs  files.rs  main.rs  node.rs  wizard.rs
crates/pohw-core/: Cargo.toml
crates/pohw-core/src/: commitment.rs  consensus_identity.rs  dkg_transport.rs  fork.rs  gossip.rs  idena_anchor.rs  ledger.rs  lib.rs  merkle.rs  payout.rs  replay.rs  share_work.rs  sharechain.rs  sharechain_state.rs  snapshot.rs  vault.rs  vault_frost.rs  vault_tx.rs  withdrawal.rs
deploy/: mining-adapter-job.example.json  pohw-bitcoin-indexer.env.example  pohw-bootstrap-miner.env.example  pohw-experiment-1.env.example  pohw-experiment.env.example  pohw-explorer-host.env.example
docs/: explorer.md  fork-chain-node.md  idena-miner-registry.md  idena-modernization.md  idena-public-state-bootstrap.md  share-work-binding.md  source-first-onboarding.md
integrations/: idena-ai-governance-day.patch
pohw_idena_rpc/: __init__.py  idena_reward_indexer.py  idena_rpc_client_minimal.py  idena_session_recorder.py
schemas/: pohw-community-onboarding-profile-v1.schema.json  pohw-community-onboarding-receipt-v1.schema.json  pohw-source-join-v1.schema.json
scripts/: idena-private-lock-exec.py  idena-public-state-export-push.sh  idena-public-state-import.sh  idena-public-state-manifest.py  idena-return-restricted-shell.sh  idena-return-rrsync-guard.py  idena-rpc-loopback-proxy.py  pohw-activate-experiment-1-profile.py  pohw-audit-ipfs-datastore-migration.sh  pohw-auto-bootstrap-if-ready.sh  pohw-bitcoin-core-build-evidence.py  pohw-bitcoin-pressure-guard.py  pohw-bootstrap-bitcoin-core-fork.sh  pohw-bootstrap-readiness.sh  pohw-build-bitcoin-core-fork.sh  pohw-build-bitcoin-indexer.sh  pohw-community-join.ps1  pohw-community-join.sh  pohw-community-onboard.ps1  pohw-community-onboard.sh  pohw-community-onboarding.py  pohw-community-status.py  pohw-compare-bitcoin-core-builds.py  pohw-compare-idena-snapshots.py  pohw-dashboard-tunnel.sh  pohw-dashboard-ui-server.py  pohw-experiment-1-launch-policy.py  pohw-experiment-1-manifest.py  pohw-experiment-1-replay-probe.py  pohw-experiment-1-wallet-acceptance.py  pohw-experiment-2-consensus-identity.py  pohw-experiment-compare-reports.py  pohw-experiment-init.sh  pohw-experiment-package.sh  pohw-experiment-preflight.sh  pohw-experiment-prepare-fork-activation.sh  pohw-experiment-publish-snapshot-vote.sh  pohw-experiment-register-miner.sh  pohw-experiment-report.sh  pohw-experiment-start-gossip.sh  (+39 more)
tests/: test_contract_toolchain_lock.py  test_governance_day_e2e.py  test_governance_day_fork_candidate_lock.py  test_governance_kubo_sidecar.py  test_governance_shareable_metadata.py  test_governance_toolchain_gate.py  test_idena_public_state_manifest.py  test_idena_public_state_scripts.py  test_idena_rpc_loopback_proxy.py  test_pohw_auto_bootstrap.py  test_pohw_bitcoin_core_build_evidence.py  test_pohw_bitcoin_core_source_provenance.py  test_pohw_bitcoin_indexer.py  test_pohw_bitcoin_pressure_guard.py  test_pohw_bootstrap_ci_security.py  test_pohw_bootstrap_miner.py  test_pohw_bootstrap_readiness.py  test_pohw_community_join.py  test_pohw_community_onboarding.py  test_pohw_compare_bitcoin_core_builds.py  test_pohw_compare_idena_snapshots.py  test_pohw_dashboard_tunnel.py  test_pohw_dashboard_ui_server.py  test_pohw_experiment_1.py  test_pohw_experiment_1_launch_policy.py  test_pohw_experiment_1_profile.py  test_pohw_experiment_1_replay_probe.py  test_pohw_experiment_1_wallet_acceptance.py  test_pohw_experiment_2_consensus_identity.py  test_pohw_experiment_compare_reports.py  test_pohw_experiment_shell_env.py  test_pohw_explorer_host.py  test_pohw_governance_build_evidence.py  test_pohw_governance_runtime_gate.py  test_pohw_health_status.py  test_pohw_host_firewall.py  (+17 more)
(+226 files in other folders)
