[workspace]
members = [
    "crates/pohw-core",
    "crates/idena-lite-indexer",
    "crates/p2pool-node",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bitcoin = { version = "0.32.7", features = ["serde"] }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
frost-secp256k1-tr = { version = "3.0.0", default-features = false, features = ["serde"] }
frost-core = { version = "3.0.0", default-features = false, features = ["serde"] }
fs2 = "0.4"
hex = "0.4"
libc = "0.2"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
