[package]
name = "governance-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "pohw-governance"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cid.workspace = true
governance-core = { path = "../governance-core" }
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.15"
