[package]
name = "governance-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cid.workspace = true
hex.workspace = true
ipld-core.workspace = true
multihash-codetable.workspace = true
regex.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
proptest = "1.6"
tempfile = "3.15"
