[package]
name = "p2pool-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
chrono.workspace = true
clap.workspace = true
crypto-bigint.workspace = true
fs2.workspace = true
hex.workspace = true
libc.workspace = true
idena-lite-indexer = { path = "../idena-lite-indexer" }
pohw-core = { path = "../pohw-core" }
rand_chacha.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tiny-keccak.workspace = true
