[package]
name = "pohw-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cid.workspace = true
clap.workspace = true
governance-core = { path = "../governance-core" }
hex.workspace = true
libc.workspace = true
multihash-codetable.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.20"
