[package]
name = "pohw-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bitcoin.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
frost-secp256k1-tr.workspace = true
frost-core.workspace = true
hex.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
